# Agilulf

./: .travis.yml  Cargo.toml  README.md  aliases.js  search-index.js  settings.html  source-files.js
agilulf/: all.html  index.html  sidebar-items.js  struct.Database.html  struct.DatabaseBuilder.html  struct.MemDatabase.html  struct.Server.html  trait.AsyncDatabase.html  trait.SyncDatabase.html
agilulf/server/tcp_server/: struct.Server.html
agilulf/storage/: trait.AsyncDatabase.html  trait.SyncDatabase.html
agilulf/storage/database/: struct.Database.html  struct.DatabaseBuilder.html
agilulf/storage/mem_database/: struct.MemDatabase.html
agilulf_driver/: Cargo.toml  README.md  all.html  index.html  sidebar-items.js  struct.AgilulfClient.html  struct.MultiAgilulfClient.html
agilulf_driver/client/: struct.AgilulfClient.html  struct.MultiAgilulfClient.html
agilulf_driver/examples/: benchmark.rs  remote_benchmark.rs
agilulf_driver/src/: client.rs  error.rs  lib.rs
agilulf_fs/: Cargo.toml  all.html  enum.FSError.html  index.html  sidebar-items.js  struct.File.html  struct.WriteFile.html  type.Result.html
agilulf_fs/error/: enum.FSError.html  type.Result.html
agilulf_fs/src/: error.rs  lib.rs
agilulf_protocol/: Cargo.toml  README.md  all.html  enum.DatabaseError.html  enum.ProtocolError.html  index.html  sidebar-items.js  struct.AsyncReadBuffer.html  struct.AsyncWriteBuffer.html  struct.Slice.html  type.DatabaseResult.html  type.Result.html
agilulf_protocol/async_buffer/: struct.AsyncReadBuffer.html  struct.AsyncWriteBuffer.html
agilulf_protocol/error/database_error/: enum.DatabaseError.html  type.Result.html
agilulf_protocol/error/protocol_error/: enum.ProtocolError.html  type.Result.html
agilulf_protocol/reply/: enum.Reply.html  enum.Status.html  index.html  sidebar-items.js
agilulf_protocol/request/: enum.Command.html  index.html  sidebar-items.js  struct.DeleteCommand.html  struct.GetCommand.html  struct.PutCommand.html  struct.ScanCommand.html
agilulf_protocol/slice/: struct.Slice.html
agilulf_protocol/src/: async_buffer.rs  lib.rs  message.rs  reply.rs  request.rs  slice.rs  tcp_buffer.rs
agilulf_protocol/src/error/: database_error.rs  mod.rs
agilulf_server/: all.html  index.html
agilulf_skiplist/: Cargo.toml  README.md  all.html  index.html  sidebar-items.js  struct.SkipMap.html
agilulf_skiplist/skipmap/: struct.SkipMap.html
agilulf_skiplist/src/: lib.rs  linklist.rs  non_standard_slice.rs  skiplist.rs  skipmap.rs
implementors/agilulf/: trait.SyncDatabase.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.From.js  trait.Into.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/future/future/: trait.Future.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/core/ops/drop/: trait.Drop.js
implementors/std/error/: trait.Error.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
src/: extend_iter.rs  lib.rs  main.rs
src/agilulf/: lib.rs.html
src/agilulf/log/: mod.rs.html
src/agilulf/server/: error.rs.html  mod.rs.html  tcp_server.rs.html
src/agilulf/storage/: database.rs.html  database_log.rs.html  error.rs.html  manifest_manager.rs.html  mem_database.rs.html  merge.rs.html  mod.rs.html  sstable.rs.html
src/agilulf_driver/: client.rs.html  error.rs.html  lib.rs.html
src/agilulf_fs/: error.rs.html  lib.rs.html
src/agilulf_protocol/: async_buffer.rs.html  lib.rs.html  message.rs.html  reply.rs.html  request.rs.html  slice.rs.html
src/agilulf_protocol/error/: database_error.rs.html  mod.rs.html  protocol_error.rs.html
src/agilulf_server/: main.rs.html
src/agilulf_skiplist/: lib.rs.html  linklist.rs.html  non_standard_slice.rs.html  skiplist.rs.html  skipmap.rs.html
src/log/: mod.rs
src/server/: error.rs  mod.rs  server.rs  tcp_server.rs
src/server/protocol/: error.rs  mod.rs  tcp_buffer.rs
src/storage/: database.rs  database_log.rs  error.rs  log_manager.rs  manifest_manager.rs  mem_database.rs  merge.rs  mod.rs  slice.rs  sstable.rs
