[package]
name = "agilulf"
version = "0.1.0"
authors = ["Yang Keao <keao.yang@yahoo.com>"]
edition = "2018"
description = "Agilulf KV server"
license = "MIT"
homepage = "https://github.com/YangKeao/Agilulf"
repository = "https://github.com/YangKeao/Agilulf.git"
readme = "README.md"

[lib]
name = "agilulf"
path = "src/lib.rs"

[[bin]]
name = "agilulf_server"
path = "src/main.rs"

[dependencies]
romio = "0.3.0-alpha.9"
quick-error = "1.2.2"
futures-preview = { version = "=0.3.0-alpha.17", features = ["async-await", "nightly"] }
log = "0.4"
env_logger = "0.6.2"
agilulf_protocol = { version="0.1.0", path = "./agilulf_protocol" }
agilulf_skiplist = { version="0.1.0", path = "./agilulf_skiplist" }
agilulf_fs = { version="0.1.0", path = "./agilulf_fs" }
memmap = "0.7.0"
libc = "0.2.60"
crossbeam = "0.7.1"
clap = "2.33.0"

[dev-dependencies]
rand = "0.7"

[workspace]
members = [
    "agilulf_protocol",
    "agilulf_driver",
    "agilulf_skiplist",
    "agilulf_fs"
]