[package]
name = "agilulf_driver"
version = "0.1.0"
authors = ["Yang Keao <keao.yang@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
romio = "0.3.0-alpha.9"
quick-error = "1.2.2"
agilulf_protocol = {path="../agilulf_protocol"}
futures-preview = { version = "=0.3.0-alpha.17", features = ["async-await", "nightly"] }

[dev-dependencies]
agilulf = {path="../"}
env_logger = "0.6.2"