[package]
name = "agilulf_fs"
version = "0.1.0"
authors = ["Yang Keao <keao.yang@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-preview = { version = "=0.3.0-alpha.17", features = ["async-await", "nightly"] }
quick-error = "1.2.2"
nix = "0.14.1"
lazy_static = "1.3.0"
libc = "0.2.60"