[package]
name = "agilulf_protocol"
version = "0.1.0"
authors = ["Yang Keao <keao.yang@yahoo.com>"]
edition = "2018"
description = "Agilulf Protocol serializer and deserializer"
license = "MIT"
homepage = "https://github.com/YangKeao/Agilulf/tree/master/agilulf_protocol"
repository = "https://github.com/YangKeao/Agilulf.git"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
romio = "0.3.0-alpha.9"
quick-error = "1.2.2"
futures-preview = { version = "=0.3.0-alpha.17", features = ["async-await", "nightly"] }
memchr = "2"
log = "0.4"
libc = "0.2.60"